@@ -1,6 +1,6 @@
 Date: 2024-11-30
 Package: CHNOSZ
-Version: 2.1.0-24
+Version: 2.1.0-25
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
