@@ -271,6 +271,7 @@ check.OBIGT <- function() {
     else if(what == "AS04") tdata <- read.csv(system.file("extdata/OBIGT/AS04.csv", package = "CHNOSZ"), as.is = TRUE)
     else if(what == "AD") tdata <- read.csv(system.file("extdata/OBIGT/AD.csv", package = "CHNOSZ"), as.is = TRUE)
     else if(what == "GEMSFIT") tdata <- read.csv(system.file("extdata/OBIGT/GEMSFIT.csv", package = "CHNOSZ"), as.is = TRUE)
+    else if(what == "IGEM24") tdata <- read.csv(system.file("extdata/OBIGT/IGEM24.csv", package = "CHNOSZ"), as.is = TRUE)
     ntot <- nrow(tdata)
     # Where to keep the results
     DCp <- DV <- DG <- rep(NA, ntot)
@@ -308,6 +309,7 @@ check.OBIGT <- function() {
   out <- rbind(out, checkfun("SUPCRT92"))
   out <- rbind(out, checkfun("AS04"))
   out <- rbind(out, checkfun("GEMSFIT"))
+  out <- rbind(out, checkfun("IGEM24"))
   # Set differences within a tolerance to NA
   out$DCp[abs(out$DCp) < 1] <- NA
   out$DV[abs(out$DV) < 1] <- NA
@@ -390,8 +392,10 @@ dumpdata <- function(file = NULL) {
   AD <- cbind(source = "AD", dat)
   dat <- read.csv(system.file("extdata/OBIGT/GEMSFIT.csv", package = "CHNOSZ"), as.is = TRUE)
   GEMSFIT <- cbind(source = "GEMSFIT", dat)
+  dat <- read.csv(system.file("extdata/OBIGT/IGEM24.csv", package = "CHNOSZ"), as.is = TRUE)
+  IGEM24 <- cbind(source = "IGEM24", dat)
   # Put it all together
-  out <- rbind(OBIGT, SUPCRT92, SLOP98, AS04, AD, DEW, GEMSFIT)
+  out <- rbind(OBIGT, SUPCRT92, SLOP98, AS04, AD, DEW, GEMSFIT, IGEM24)
   # Quote columns 2 (name) and 3 (abbrv) because they have commas for some entries
   if(!is.null(file)) write.csv(out, file, row.names = FALSE, quote = c(2, 3))
   else(return(out))
