@@ -1788,6 +1788,16 @@
   url       = {https://www.worldcat.org/oclc/16131757},
 }
 
+@Article{TTA+23,
+  author    = {Nikolay D. Trofimov and Boris R. Tagirov and Nikolay N. Akinfiev and Vladimir L. Reukov and Maximilian S. Nickolsky and Irina Yu. Nikolaeva and Maria E. Tarnopolskaya and Andrey A. Afanasyev},
+  journal   = {Chemical Geology},
+  title     = {Chalcocite {Cu\textsubscript{2}S} solubility in aqueous sulfide and chloride fluids. Thermodynamic properties of copper({I}) aqueous species and copper transport in hydrothermal systems},
+  year      = {2023},
+  pages     = {121413},
+  volume    = {625},
+  doi       = {10.1016/j.chemgeo.2023.121413},
+}
+
 @Book{NEA20,
   author    = {I. Grenthe and X. Gaona and A. Plyasunov and L. Rao and W. Runde and B. Grambow},
   publisher = {OECD and Nuclear Energy Agency},
@@ -1834,4 +1844,34 @@
   year      = {1972},
   pages     = {1768--1781},
   volume    = {57},
+}
+
+@Article{TAZ24,
+  author    = {Tagirov, B. R. and Akinfiev, N. N. and Zotov, A. V.},
+  journal   = {Geology of Ore Deposits},
+  title     = {Gold({I}) complexation in chloride hydrothermal fluids},
+  year      = {2024},
+  number    = {5},
+  pages     = {581--597},
+  volume    = {66},
+  doi       = {10.1134/S1075701524600403},
+}
+
+@Article{TAT+24,
+  author    = {Boris R. Tagirov and Nikolay N. Akinfiev and Mariia E. Tarnopolskaia and Irina Yu. Nikolaeva and Irina Yu. Zlivko and Valentina A. Volchenkova and Luydmila A. Koroleva and Alexander V. Zotov},
+  journal   = {Geochimica et Cosmochimica Acta},
+  title     = {Gold in sulfide fluids revisited},
+  year      = {2024},
+  doi       = {10.1016/j.gca.2024.08.022},
+}
+
+@Article{AZ23,
+  author    = {Akinfiev, N. N. and Zotov, A. V.},
+  journal   = {Geology of Ore Deposits},
+  title     = {Copper in hydrothermal systems: a thermodynamic description of hydroxocomplexes},
+  year      = {2023},
+  number    = {1},
+  pages     = {1--10},
+  volume    = {65},
+  doi       = {10.1134/S1075701523010026},
 }
